--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -11,6 +11,8 @@
                                 </div>
                             </div>
                         </div>
+                        <mat-tab-group>
+                            <mat-tab  label="Expenses">
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="searchData()">
                                 <div class="row" >
@@ -185,9 +187,224 @@
                                 </div>
                             </div>
                         </div>
+                            </mat-tab>
+                            <mat-tab  label="Expenses Register">
+                                <div class="body">
+                                    <form class="p-3 pb-0" #fr="ngForm" (ngSubmit)="getRegisterSale()">
+                                        <div class="row">
+
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Filter Types</mat-label>
+                                                    <mat-select name="FilterTypes" [(ngModel)]="FilterTypeR"
+                                                        (selectionChange)="ChangeDate()" required>
+                                                        <mat-option value="YearMonthWise">YearMonthWise</mat-option>
+                                                        <mat-option value="YearWise">YearWise</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0 "
+                                                *ngIf='FilterTypeR == "YearWise"'>
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From</mat-label>
+                                                    <mat-select name="FromDate" [(ngModel)]="dataRegister.FromDate"
+                                                        required>
+                                                        <mat-option value="2022-01-01">2022</mat-option>
+                                                        <mat-option value="2023-01-01">2023</mat-option>
+                                                        <mat-option value="2024-01-01">2024</mat-option>
+                                                        <mat-option value="2025-01-01">2025</mat-option>
+                                                        <mat-option value="2026-01-01">2026</mat-option>
+                                                        <mat-option value="2027-01-01">2027</mat-option>
+                                                        <mat-option value="2028-01-01">2028</mat-option>
+                                                        <mat-option value="2029-01-01">2029</mat-option>
+                                                        <mat-option value="2030-01-01">2030</mat-option>
+                                                        <mat-option value="2031-01-01">2031</mat-option>
+                                                        <mat-option value="2032-01-01">2032</mat-option>
+                                                        <mat-option value="2033-01-01">2033</mat-option>
+                                                        <mat-option value="2034-01-01">2034</mat-option>
+                                                        <mat-option value="2035-01-01">2035</mat-option>
+                                                        <mat-option value="2036-01-01">2036</mat-option>
+                                                        <mat-option value="2037-01-01">2037</mat-option>
+                                                        <mat-option value="2038-01-01">2038</mat-option>
+                                                        <mat-option value="2039-01-01">2039</mat-option>
+                                                        <mat-option value="2040-01-01">2040</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-12 mb-0 "
+                                                *ngIf='FilterTypeR == "YearWise"'>
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>ToDate</mat-label>
+                                                    <mat-select name="ToDate" [(ngModel)]="dataRegister.ToDate"
+                                                        required>
+                                                        <mat-option value="2022-12-31">2022</mat-option>
+                                                        <mat-option value="2023-12-31">2023</mat-option>
+                                                        <mat-option value="2024-12-31">2024</mat-option>
+                                                        <mat-option value="2025-12-31">2025</mat-option>
+                                                        <mat-option value="2026-12-31">2026</mat-option>
+                                                        <mat-option value="2027-12-31">2027</mat-option>
+                                                        <mat-option value="2028-12-31">2028</mat-option>
+                                                        <mat-option value="2029-12-31">2029</mat-option>
+                                                        <mat-option value="2030-12-31">2030</mat-option>
+                                                        <mat-option value="2031-12-31">2031</mat-option>
+                                                        <mat-option value="2032-12-31">2032</mat-option>
+                                                        <mat-option value="2033-12-31">2033</mat-option>
+                                                        <mat-option value="2034-12-31">2034</mat-option>
+                                                        <mat-option value="2035-12-31">2035</mat-option>
+                                                        <mat-option value="2036-12-31">2036</mat-option>
+                                                        <mat-option value="2037-12-31">2037</mat-option>
+                                                        <mat-option value="2038-12-31">2038</mat-option>
+                                                        <mat-option value="2039-12-31">2039</mat-option>
+                                                        <mat-option value="2040-12-31">2040</mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 "
+                                                *ngIf='FilterTypeR == "YearMonthWise"'>
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>From</mat-label>
+                                                    <input matInput name="FromDate" type="month" required
+                                                        [(ngModel)]="dataRegister.FromDate" #Fromcontrol>
+                                                </mat-form-field>
+                                            </div>
+
+                                            <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 "
+                                                *ngIf='FilterTypeR == "YearMonthWise"'>
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>To</mat-label>
+                                                    <input matInput name="ToDate" type="month" required
+                                                        [(ngModel)]="dataRegister.ToDate" #Fromcontrol>
+                                                </mat-form-field>
+                                            </div>
+
+
+
+                                            <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="dataRegister.ShopID" multiple
+                                                        required>
+                                                        <mat-option [value]=0>All</mat-option>
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                                <mat-form-field class="example-full-width mb-0"
+                                                    *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                                    <mat-label>Shop Name</mat-label>
+                                                    <mat-select name="shopID" [(ngModel)]="dataRegister.ShopID">
+                                                        <mat-option [value]="s.ID" *ngFor="let s of shopList">
+                                                            {{s.Name}}
+                                                            <span [style.color]="'blue'"
+                                                                *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                                                        </mat-option>
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
+                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0 ">
+                                                <button type="submit" mat-raised-button color="primary"
+                                                    [disabled]="!fr.valid ">
+                                                    Search
+                                                </button>
+                                                <button class="me-3 ms-3" type="button" mat-raised-button color="warn">
+                                                    Reset
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                    <div class="body p-2">
+                                        <div class="row">
+                                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-0 ">
+                                                <div  class="col-sm-12"
+                                                    style="overflow: auto; height: 450px;">
+                                                    <table
+                                                        class="table table-striped table-hover table-sm table-bordered"
+                                                        style="border: 2px solid #fff !important;" >
+                                                        <thead>
+                                                            <tr class="text-center" style="white-space: normal;">
+                                                                <th>S.No</th>
+                                                                <th>Month </th>
+                                                                <th>Amount</th>
+                                                                <th>Paid</th>
+                                                                <th>Balance</th>
+                                                            </tr>
+                                                            <tr class="totolRow"
+                                                                *ngIf="this.RegisterList != null && this.RegisterList != ''">
+                                                                <td></td>
+                                                                <td></td>
+                                                                <td>{{this.RegisterAmount}}</td>
+                                                                <td>{{this.RegisterPaid}}</td>
+                                                                <td>{{this.RegisterBalance}}</td>
+
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody class="text-center">
+                                                            <tr *ngFor="let data of RegisterList; let i = index"
+                                                                text="left">
+                                                                <td>{{ i + 1 }}</td>
+                                                                <td (click)="openModalR(contentR,data)">
+                                                                    {{data.MonthYear}} {{data.YEAR}}</td>
+                                                                <td>{{data.Amount}}</td>
+                                                                <td>{{data.Paid}}</td>
+                                                                <td>{{data.Balance}}</td>
+
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </mat-tab>
+                        </mat-tab-group>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
+<!-- model expiry-->
+<ng-template #contentR role="document" let-modal>
+    <div class="modal-header" style="height: 50px;">
+        <h3 class="modal-title header pt-2" id="exampleModalLabel">{{this.MonthYearHead}} List</h3>
+        <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <div class="row" >
+            <div  class="col-sm-12"
+            style="overflow: auto; height: 450px;">
+                <table class="table table-striped table-hover table-sm table-bordered"
+                style="border: 2px solid #fff !important;" id="saleExpiryExcel">
+                <thead>
+                    <tr class="text-center" style="white-space: normal;">
+                        <th>S.No</th>
+                        <th>Date </th>
+                        <th>Amount</th>
+                        <th>Paid</th>
+                        <th>Balance</th>
+                    </tr>
+                </thead>
+                <tbody class="text-center">
+                    <tr *ngFor="let data of RegisterDetailList; let i = index" text="left">
+                        <td>{{ i + 1 }}</td>
+                        <td>{{data.ExpenseDate | date: 'dd-MM-yyyy'}}</td>
+                        <td>{{data.Amount}}</td>
+                        <td>{{data.Paid }}</td>
+                        <td>{{data.Balance}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+          
+        </div>
+    </div>
+</ng-template>
