--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -2133,7 +2133,9 @@
       <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
-      <div class="row" style="overflow: auto; height: 450px;">
+      <div class="row" >
+        <div  class="col-sm-12"
+        style="overflow: auto; height: 450px;">
           <table class="table table-striped table-hover table-sm table-bordered"
               style="border: 2px solid #fff !important;" id="saleExpiryExcel">
               <thead>
@@ -2148,13 +2150,14 @@
               <tbody class="text-center">
                   <tr *ngFor="let data of RegisterDetailList; let i = index" text="left">
                       <td>{{ i + 1 }}</td>
-                      <td>{{data.BillDate | date: 'dd-MM-yyyy'}}</td>
+                      <td>{{data.PurchaseDate | date: 'dd-MM-yyyy'}}</td>
                       <td>{{data.Amount}}</td>
                       <td>{{data.Paid }}</td>
                       <td>{{data.Balance}}</td>
                   </tr>
               </tbody>
           </table>
+      </div>
       </div>
   </div>
 </ng-template>
