--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -3255,11 +3255,6 @@
                                                         </tbody>
                                                     </table>
                                                 </div>
-                                                <div class="col-xl-6 col-lg-6 col-md-6 col-12 mb-0 ">
-                                                    <div style="width: 100%; height: 400px;">
-                                                     
-                                                      </div>
-                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -3480,6 +3475,8 @@
     </div>
     <div class="modal-body">
         <div class="row" style="overflow: auto; height: 450px;">
+                 <div  class="col-sm-12"
+            style="overflow: auto; height: 450px;">
             <table class="table table-striped table-hover table-sm table-bordered"
                 style="border: 2px solid #fff !important;" id="saleExpiryExcel">
                 <thead>
@@ -3501,6 +3498,7 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
         </div>
     </div>
 </ng-template>
