--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -1049,12 +1049,12 @@
                     <button type="button" class="  me-md-3 me-0" mat-raised-button color="primary"
                         [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
                         <button type="button" mat-raised-button color="primary"
-                        [disabled]="BillMaster.ID === null" (click)="billPrint('Invoice')" > <span class="first-letter">R</span>eceipt</button>
+                        [disabled]="BillMaster.ID === null || this.fortyPercentDisabledB == true" (click)="billPrint('Invoice')" > <span class="first-letter">R</span>eceipt</button>
                         <!-- <button type="button" (click)="billPrints('Invoice')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Invoice')" class="small_big_Btn "> B</button> -->
 
                     <button type="button" class=" me-md-0 me-0 ms-md-3 ms-0"  mat-raised-button color="primary"
-                    [disabled]="BillMaster.ID === null" (click)="billPrint('Receipt')"> <span class="first-letter">I</span>nvoice</button>
+                    [disabled]="BillMaster.ID === null || this.fortyPercentDisabledB == true" (click)="billPrint('Receipt')"> <span class="first-letter">I</span>nvoice</button>
                         <!-- <button type="button" (click)="billPrints('Receipt')" class="small_big_Btn"> S</button>
                         <button type="button" (click)="billPrintB('Receipt')" class="small_big_Btn "> B</button> -->
 
@@ -1070,10 +1070,10 @@
                         <!-- [disabled]="this.BillLink == ''" -->
                    
 
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'"   [disabled]="this.fortyPercentDisabledB == true" (click)="sendWhatsapp('bill')" class="bgRemove whatsappBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i></button>
                     <button type="button" class="bgRemove ms-0 me-0"><i class="fa-solid fa-envelope EmailBill"></i></button>
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == ''" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
-                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="this.BillLink == '' || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Fbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Final</button>
+                    <button type="button" *ngIf="this.company.WhatsappMsg == 'true'" [disabled]="!this.BillMaster.InvoiceNo || this.fortyPercentDisabledB == true" (click)="sendWhatsapp('Textbill')" class="bgRemove whatsappfBill ms-lg-2 me-lg-1 ms-md-3 me-md-3 ms-0 me-0"><i  class="fa-brands fa-whatsapp "></i> Text</button>
                 </div>
             </div>
         </form>
@@ -1343,14 +1343,14 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>New Payment</mat-label>
                         <input type="number" min="0" style="font-size: 17px !important;" matInput name="PaymentAmount"
-                            [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false" >
+                            [(ngModel)]="applyPayment.PaidAmount" [autocomplete]="false" (change)="isDisableds()">
                     </mat-form-field>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0"
                     *ngIf="applyPayment.ApplyReward !== true && applyPayment.ApplyReturn !== true">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Payment Mode</mat-label>
-                        <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1>
+                        <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1  >
                             <mat-option [value]="p.Name" *ngFor="let p of PaymentModesList"> {{p.Name}} </mat-option>
                         </mat-select>
                     </mat-form-field>
@@ -1359,7 +1359,7 @@
                     *ngIf="applyPayment.ApplyReward === true || applyPayment.ApplyReturn === true">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Payment Mode</mat-label>
-                        <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1>
+                        <mat-select name="PayMode" [(ngModel)]="applyPayment.PaymentMode" required #GSTTypecontrol1 >
                             <mat-option value="Customer Credit" *ngIf="applyPayment.CustomerCredit !== 0 && applyPayment.ApplyReturn === true">Customer
                                 Credit</mat-option>
                             <mat-option value="Customer Reward"
@@ -1411,7 +1411,7 @@
                             </mat-form-field>
                         </div> -->
                 <div class="col-xl-2 col-lg-2 col-md-2 col-4">
-                    <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0"
+                    <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0 || fortyPercentDisabled == true"
                         mat-raised-button color="primary">Apply Payment</button>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
@@ -1532,7 +1532,7 @@
                             </div>
             
                             <div class="col-xl-3 col-lg-4 col-md-6 col-4" >
-                                <button (click)="onRewardSubmit()" [disabled]="f7.invalid || otpChecked === false || applyReward.Otp === null"
+                                <button (click)="onRewardSubmit()" [disabled]="f7.invalid || otpChecked === false || applyReward.Otp === null "
                                     mat-raised-button color="primary">Apply Reward</button>
                             </div>
                             
